fix: vertical spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 .horizontal-spacing {
-  @apply mx-auto px-10 py-10 lg:px-40 xl:w-2/4 xl:px-0;
+  @apply mx-auto px-10 md:py-5 lg:px-40 xl:w-2/4 xl:px-0;
 }
